--- a/NewsTicker/SubscribeNewsPage.xaml
+++ b/NewsTicker/SubscribeNewsPage.xaml
@@ -1,20 +1,19 @@
-﻿<phone:PhoneApplicationPage
-    x:Class="NewsTicker.MainPage"
+﻿<phone:PhoneApplicationPage 
+    x:Class="NewsTicker.SubscribeNewsPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
     xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-    mc:Ignorable="d" d:DesignWidth="480" d:DesignHeight="696" 
-    d:DataContext="{d:DesignData SampleData/MainViewModelSampleData.xaml}"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
-    SupportedOrientations="Portrait"  Orientation="Portrait"
-    shell:SystemTray.IsVisible="True">
+    SupportedOrientations="Portrait" Orientation="Portrait"
+    mc:Ignorable="d" d:DesignHeight="768" d:DesignWidth="480"
+    shell:SystemTray.IsVisible="True" Unloaded="PhoneApplicationPage_Unloaded">
 
-    <!--Data context is set to sample data above and LayoutRoot contains the root grid where all other page content is placed-->
+    <!--LayoutRoot is the root grid where all page content is placed-->
     <Grid x:Name="LayoutRoot" Background="Transparent">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -24,42 +23,42 @@
         <!--TitlePanel contains the name of the application and page title-->
         <StackPanel x:Name="TitlePanel" Grid.Row="0" Margin="12,17,0,28">
             <TextBlock x:Name="ApplicationTitle" Text="News Ticker" Style="{StaticResource PhoneTextNormalStyle}"/>
-            <TextBlock x:Name="PageTitle" Text="recent news" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
+            <TextBlock x:Name="PageTitle" Text="subscribe to news" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
         </StackPanel>
 
-        <!--ContentPanel contains ListBox and ListBox ItemTemplate. Place additional content here-->
+        <!--ContentPanel - place additional content here-->
         <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
             <StackPanel Height="591" HorizontalAlignment="Left" Margin="10,10,0,0" Name="MainPanal" VerticalAlignment="Top" Width="Auto" Orientation="Vertical" >
                 <StackPanel Height="Auto" Name="stackPanel1" Width="Auto"  Orientation="Horizontal">
-                    <TextBox Height="72" Name="SearchTextBox" Text="" Width="310" Margin="-15,0" />
-                    <Button Content="Search" Height="72" Name="Search" Width="160" Click="Search_Click" />
+                    <TextBox Height="72" Name="SearchTextBox" Text="NEWS.MOCKHEADLINES.UK" Width="343" Margin="-15,0" />
+                    <Button Content="Hook!" Height="72" Name="Search" Width="125" Click="Search_Click" />
                 </StackPanel>
-                
-                
-                <ListBox x:Name="MainListBox" Height="428" Margin="-12,20,-12,0" ItemsSource="{Binding Items}" SelectionChanged="MainListBox_SelectionChanged" Width="438">
+                <TextBlock Height="60" Name="SuccessfulMessage" Text="Subscribed successfully. Now whenever new news becomes available, will appear below." TextWrapping="Wrap" Visibility="Collapsed" />
+                <ListBox x:Name="MainListBox" Height="437" Margin="-12,20,-12,0" ItemsSource="{Binding Items}" Width="438">
                     <ListBox.ItemTemplate>
                         <DataTemplate>
                             <StackPanel Margin="0,0,0,17" Width="432">
                                 <TextBlock Text="{Binding Headline}" TextWrapping="Wrap" Style="{StaticResource PhoneTextLargeStyle}"/>
                                 <TextBlock Text="{Binding PublishDate}" TextWrapping="Wrap" Margin="12,-6,12,0" Style="{StaticResource PhoneTextSubtleStyle}"/>
                             </StackPanel>
-                        </DataTemplate>                        
+                        </DataTemplate>
                     </ListBox.ItemTemplate>
                 </ListBox>
+                
             </StackPanel>
         </Grid>
     </Grid>
-
+ 
     <!--Sample code showing usage of ApplicationBar-->
-    <phone:PhoneApplicationPage.ApplicationBar>
+    <!--<phone:PhoneApplicationPage.ApplicationBar>
         <shell:ApplicationBar IsVisible="True" IsMenuEnabled="True">
-            <shell:ApplicationBarIconButton IconUri="/Images/appbar.favs.addto.rest.png" Text="Subscribe" Click="ApplicationBarIconButton_Click"/>
-            <!--<shell:ApplicationBarIconButton IconUri="/Images/appbar_button2.png" Text="Button 2"/>
+            <shell:ApplicationBarIconButton IconUri="/Images/appbar_button1.png" Text="Button 1"/>
+            <shell:ApplicationBarIconButton IconUri="/Images/appbar_button2.png" Text="Button 2"/>
             <shell:ApplicationBar.MenuItems>
                 <shell:ApplicationBarMenuItem Text="MenuItem 1"/>
                 <shell:ApplicationBarMenuItem Text="MenuItem 2"/>
-            </shell:ApplicationBar.MenuItems>-->
+            </shell:ApplicationBar.MenuItems>
         </shell:ApplicationBar>
-    </phone:PhoneApplicationPage.ApplicationBar>
+    </phone:PhoneApplicationPage.ApplicationBar>-->
 
 </phone:PhoneApplicationPage>
